fix: add viewport-fit

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "author": "dominicleo",
   "keywords": [
-    "vite"
+    "umi"
   ],
   "homepage": "https://github.com/dominicleo/umi-plugin-flexible#readme",
   "repository": {
